--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <p class="num-def">furnituress sold</p>
                 <div class="btn">
                     <button class="button1">Learn more</button>
-                    <hr class="line">
-                    <i class="fas fa-thin fa-greater-than"></i>
+                    <i class="fas fa-arrow-right-long"></i>
                 </div>
             </div>
         </div>
