--- a/index.html
+++ b/index.html
@@ -54,15 +54,23 @@
             <hr>
             <h1>Benefits you get when using our services</h1>
             </div>
-            <i class="icon fas fa-award"></i>
-            <h3>Best Quality</h3>
-            <i class="icon fas fa-truck fa-lg"></i>
-            <h3>Free Shipping</h3>
-            <i class="icon fas fa-check"></i>
-            <h3>Warranty</h3>
-            <p>All of our furniture uses the best materials and choices for our customers.</p>
-            <p>Free shipping everytime you buy furniture from us without exeption</p>
-            <p>Every time you buy our furniture products, you will get a warranty without exception.</p>
+            <div class="benefit-part">
+                <div class="part">
+                    <i class="icon fas fa-award"></i>
+                    <h3>Best Quality</h3>
+                    <p>All of our furniture uses the best materials and choices for our customers.</p>
+                </div>                
+                <div class="part">
+                    <i class="icon fas fa-truck fa-lg"></i>
+                    <h3>Free Shipping</h3>
+                    <p>Free shipping everytime you buy furniture from us without exeption</p>                
+                </div>
+                <div class="part">
+                    <i class="icon fas fa-check"></i>
+                <h3>Warranty</h3>
+                <p>Every time you buy our furniture products, you will get a warranty without exception.</p>
+                </div>
+            </div>          
         </div>
     </section>
     <section class="experience">
@@ -107,10 +115,9 @@
                 wants has been achieved.Then we carry out the execution of 
                 the desired concept.
             </p>
-            <div class="step-num"><p>03</p></div>
+            <div class="step-num step"><p>03</p></div>
             
             <h3>Finishing</h3>
-            <div class="vl"></div>
             <p>After the process is complete, we will immediately carry
                 ouT the finidhing stage and we do it carefully and make
                 sure there are no mistakes.
