--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-4</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script defer="" src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -45,7 +44,6 @@
                 </div>
                 <img src="images/furniture.jpg" alt="furniture">
             </div>
-           
         </div>
     </section>
     <section class="benefits">
@@ -56,7 +54,7 @@
             </div>
             <div class="benefit-part">
                 <div class="part">
-                    <i class="icon fas fa-award"></i>
+                    <i class="icon fas fa-star"></i>
                     <h3>Best Quality</h3>
                     <p>All of our furniture uses the best materials and choices for our customers.</p>
                 </div>                
@@ -93,7 +91,9 @@
                 <p class="num-def">furnituress sold</p>
                 <div class="btn">
                     <button class="button1">Learn more</button>
-                    <i class="fas fa-arrow-right-long"></i>
+                    <div class="arrow">
+                        <img src="images/arrow22.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -176,12 +176,10 @@
                 email below to get our daily update about us
             </p>
             <form action="#">
-
                 <input type="text" id="fname" name="firstname" placeholder="Enter your email address">
-                
             </form>
             <button class="subscribe">Subscribe</button>
-             </div>
+        </div>
     </section>
     <footer>
         <div class="container">
