--- a/index.html
+++ b/index.html
@@ -83,12 +83,18 @@
                     in their fields with an elegant and luxurious style and
                     with premium quality materials
                 </p>
-                <p class="num"> 17</p>
-                <p class="num"> 85</p>
+                <div class="number">
+                    <p class="num"> 17</p>
+                    <p class="num-def">Years experience</p>
+                </div>
+                <div class="number">
+                    <p class="num"> 85</p>
+                    <p class="num-def">Award gained</p>
+                </div>
+                <div class="number">
                 <p class="num"> 537</p>
-                <p class="num-def">Years experience</p>
-                <p class="num-def">Award gained</p>
                 <p class="num-def">furnituress sold</p>
+                </div>
                 <div class="btn">
                     <button class="button1">Learn more</button>
                     <div class="arrow">
@@ -104,13 +110,13 @@
                 <h1>We provide the best process experience</h1>
             <div class="step-num"><p>01</p></div>
             <h3>Briefling</h3>
-            <div class="vl"></div>
+            <div class="vertical-line"></div>
             <p>First thing you determine the concept and model you want,
                 then choose what colors and materials you want to use in your furniture.
             </p>
             <div class="step-num"><p>02</p></div>
             <h3>Processing</h3>
-            <div class="vl"></div>
+            <div class="vertical-line"></div>
             <p>When the briefing process is complete and what the client
                 wants has been achieved.Then we carry out the execution of 
                 the desired concept.
@@ -123,7 +129,6 @@
                 sure there are no mistakes.
             </p>
             </div>
-            
             <div class="product-img">
                 <img src="images/productdisplay.png" alt="">
             </div>
@@ -146,10 +151,13 @@
                         thing they provide excellent service and the results give 
                         are also very satisfying by giving elegant impression."
                     </p>
-                    <img class="person" src="images/p2.jpg" alt="Person">
+                    
                     <div class="name">
-                        <p>Raiph Edwards </p> 
-                        <p class="job">Product manager</p>
+                        <img class="person" src="images/p2.jpg" alt="Person">
+                        <div class="job" >
+                            <p>Raiph Edwards </p> 
+                            <p >Product manager</p>
+                        </div>
                     </div>
                 </div>
                 <div class="review-grid">
@@ -160,10 +168,12 @@
                         the result were unexpected.The results given are in accordance 
                         with what i want."
                     </p>
-                    <img class="person" src="images/p1.jpg" alt="Person">
-                    <div class="name">
-                        <p>Raiph Edwards </p> 
-                        <p class="job">Product manager</p>
+                     <div class="name">
+                        <img class="person" src="images/p1.jpg" alt="Person">
+                        <div class="job" >
+                            <p>Raiph Edwards </p> 
+                            <p >Product manager</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -175,35 +185,37 @@
             <p>We recommended you to subscribe to our newspaper,enter your
                 email below to get our daily update about us
             </p>
-            <form action="#">
-                <input type="text" id="fname" name="firstname" placeholder="Enter your email address">
-            </form>
-            <button class="subscribe">Subscribe</button>
+            <div class="form">
+                <form action="#">
+                    <input type="text" id="fname" name="firstname" placeholder="Enter your email address">
+                </form>
+                <button class="subscribe">Subscribe</button>
+            </div>
         </div>
     </section>
     <footer>
         <div class="container">
-            <div>
+            <div class="brand-detail footer-part">
                 <h4>Luxterior</h4>
-                <p class="brand-detail">We will help you to make elegant and luxurious interior designed
+                <p >We will help you to make elegant and luxurious interior designed
                     by a professional interior designer.
                 </p>
             </div>
-            <div>
+            <div class="footer-part">
                 <h4>About</h4>
                 <p>About us</p>
                 <p>Features</p>
                 <p>News</p>
                 <p class="feedback">careers</p>
             </div>
-            <div>
+            <div  class="footer-part">
                 <h4>Company</h4>
                 <p>Our team</p>
                 <p>Partnes with us</p>
                 <p>FAQ</p>
                 <p class="feedback">Blog</p>
             </div>
-            <div>
+            <div  class="footer-part">
                 <h4>Support</h4>
                 <p>Account</p>
                 <p>Support center</p>
@@ -211,7 +223,7 @@
                 <p>Contact us</p>
                 <p>Accesbility</p>
             </div>
-            <div>
+            <div  class="footer-part">
                 <h4>Get in touch</h4>
                 <p>Qwestion or feedback?</p>
                 <p class="feedback">We'd love to hear from you</p>
